<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_pic_fmt" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_picture_formats"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_prev_fmt" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_preview_formats"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <CheckBox
    	android:id="@+id/camera_shutter_snd"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
	    android:text="@string/aug_fld_title_shutter_sound" 
    	/>

	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    android:text="@string/aug_fld_title_x_pic_fmt" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_xpicture_formats"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    android:text="@string/aug_fld_title_pic_sz" 
    style="@style/AugMediumText"
	/>
	<Spinner
	android:id="@+id/camera_picture_sizes"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    android:text="@string/aug_fld_title_prev_sz" 
    style="@style/AugMediumText"
	/>
	<Spinner
	android:id="@+id/camera_preview_sizes"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    android:text="@string/aug_fld_title_jpg_q" 
    style="@style/AugMediumText"
	/>
    <TextView
	android:id="@+id/camera_jpeg_quality"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    style="@style/AugSmallText"
	/>
	</TableRow>
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
	<SeekBar
	android:id="@+id/camera_jpeg_quality_bar"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>

	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    android:text="@string/aug_fld_title_jpg_thn_q" 
    style="@style/AugMediumText"
	/>
    <TextView
	android:id="@+id/camera_jpeg_thumbnail_quality"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    style="@style/AugSmallText"
	/>
	</TableRow>
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
	<SeekBar
	android:id="@+id/camera_jpeg_thumbnail_quality_bar"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>

	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
    android:text="@string/aug_fld_title_prev_fps_range" 
    style="@style/AugMediumText"
	/>
	<Spinner
	android:id="@+id/camera_preview_fps_range"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
</TableLayout>
</ScrollView>
