<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

<TableLayout 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_color_mode" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_color_modes"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>

	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_white_bal" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_whitebal_modes"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>

	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_scene_mode" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_scene_modes"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>

	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >

    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_anti_banding_values" 
    style="@style/AugMediumText"
	/>

	<Spinner
	android:id="@+id/camera_antibanding_values"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
</TableLayout>
</ScrollView>
